--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,7 +14,7 @@
         <!--Logo-->
         <ImageView
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/logo"
+            android:src="@drawable/logofms"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <!--User-->
@@ -71,6 +71,8 @@
 
         <!--Register-->
         <TextView
+            android:id="@+id/txtRegister"
+            android:clickable="true"
             android:textColor="@color/colorAccent"
             android:layout_margin="10dp"
             android:layout_gravity="center_horizontal"
