--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -17,6 +17,12 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <!--Logo-->
+        <ImageView
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     <!--Name-->
         <LinearLayout
@@ -69,25 +75,27 @@
         <!--Password-->
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <!--Icon-->
             <ImageView
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_action_password"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:baselineAligned="false"
+                android:src="@drawable/ic_action_password" />
 
             <!--Textfeild-->
             <EditText
-                android:inputType="text"
-                android:hint="Password :"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:hint="Password :"
+                android:inputType="text" />
 
 
         </LinearLayout>
 
     </LinearLayout>
+</LinearLayout>
