--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -32,6 +32,7 @@
 
     <!--Textfeild-->
     <EditText
+        android:id="@+id/edtUser"
         android:inputType="text"
         android:hint="User :"
         android:layout_width="match_parent"
@@ -55,6 +56,7 @@
 
             <!--Textfeild-->
             <EditText
+                android:id="@+id/edtPassword"
                 android:inputType="textPassword"
                 android:hint="password :"
                 android:layout_width="match_parent"
@@ -65,6 +67,7 @@
 
         <!--Loin Button-->
         <Button
+            android:id="@+id/btnLogin"
             android:text="login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
