--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -40,6 +40,7 @@
 
             <!--Textfeild-->
             <EditText
+                android:id="@+id/edtMame"
                 android:inputType="text"
                 android:hint="Name :"
                 android:layout_width="match_parent"
@@ -64,6 +65,7 @@
 
             <!--Textfeild-->
             <EditText
+                android:id="@+id/edtUser"
                 android:inputType="text"
                 android:hint="User :"
                 android:layout_width="match_parent"
@@ -90,6 +92,7 @@
 
             <!--Textfeild-->
             <EditText
+                android:id="@+id/edtPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Password :"
